171648183-respond-trip: respond to trip request
- create a respondTrip method in tripController.js
- create updateTripById method in tripHelper.js
- update provided data in the database
- validate inserted data using the validateTripResponse method

[Finishes #171648183]
